# machine-learning-works

./: .gitignore  download.py  eda.ipynb  pyproject.toml  result.csv  result2.csv  ridge_grid_search.py
experimento01_Ivina/: Pontos_importantes.md  analise.py  main.py
experimento01_Ivina/output_analisefinal/: lstm_gold.keras  previsoes_futuras.xlsx  scaler.pkl
experimento01_Ivina/outputs/: lstm_gold.keras  scaler.pkl
gold/: cnn.ipynb  cnn2.ipynb  download.py  eda.ipynb  ridge_grid_search.py
rent/: detect_outliers.ipynb  download.py  eda-linear-regression.ipynb  eda.ipynb  eu_sou_maluco.py  fetch_poi_data.py  final.ipynb  linear-regression.ipynb  overpass_KILLER_test.py  poi-data-count.parquet  random_forest_regressor.ipynb  ridge.ipynb  run.py  tfidf_test.ipynb
rent/poi-data/: poi-data-count-5d44b231d67f516b837067ff178d5c01.parquet
spotify/: df_results.csv  download.py  eda.ipynb  eda_final.ipynb
